<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/seller_menu_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/customer_menu_search" />

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/wishlist"
            android:title="@string/customer_menu_wishlist" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/customer_menu_cart" />

        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/checkout"
            android:title="@string/customer_menu_checkout" />

        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/order_history"
            android:title="@string/customer_menu_order_history" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location"
            android:title="@string/customer_menu_location" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="@string/customer_menu_contact" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/seller_menu_messages" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/seller_menu_profile" />
    </group>
</menu>