<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/seller_menu_home" />

        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/bar_chart"
            android:title="@string/seller_menu_analytics" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/seller_menu_orders"/>

        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/book"
            android:title="@string/seller_menu_add_books" />

        <item
            android:id="@+id/nav_listing"
            android:icon="@drawable/list"
            android:title="@string/seller_menu_listing" />

        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/promotions"
            android:title="@string/seller_menu_promotions" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/seller_menu_messages" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/seller_menu_profile" />
    </group>
</menu>